TheMightyDude (15 August 2012)
--------------------------------------
Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
Fixed Notice: Undefined index: loggedin, last_run in footer.php

TheMightyDude (13 August 2012)
--------------------------------------
Added the Template API to support both Smarty Templates (HTML) and XML DOM (External Clients when added)

TheMightyDude (11 August 2012)
--------------------------------------
Added the Smarty Template Backend.
Added new include functions.

TheMightyDude (07 August 2012)
--------------------------------------
Fixed issue with perfmon.php where when you click on the explain links it then had issues with the database.
Fixed multiple Notice: Undefined offset: x in navcomp.php

TheKabal (05 August 2012)
--------------------------------------
Migrated newplayer guide and faq to PHP, fixed html, fixed CSS for them, changed all links to point to their new locations
Bumped version number for release
Removed dev file before release

TheMightyDude (05 August 2012)
--------------------------------------
Fixed Notice: Undefined index: pore, porganics, pgoods, penergy, pfighters and ptorp in planet.php

TheMightyDude (03 August 2012)
--------------------------------------
Fixed bug in news.php where some dates wasn't working.
Fixed Notice: Use of undefined constant ship_name - assumed 'ship_name' in combat.php
Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in combat.php
Fixed Notice: Undefined variable: l_igb_errnobase in igb.php
Fixed Notice: Undefined variable: op in mines.php
Fixed Notice: Use of undefined constant corp - assumed 'corp' in planet_report.php

TheMightyDude (02 August 2012)
--------------------------------------
Fixed Notice: Undefined variable: l_igb_invalidamount in igb.php
Fixed missing gaps in the news headline text.

TheMightyDude (31 July 2012)
--------------------------------------